# make_ext4fs

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  build.sh  readme.md
cmake/: CMakeLists.txt
cmake/lib/: CMakeLists.txt
cmake/lib/libselinux/: CMakeLists.txt
cmake/lib/libsparse/: CMakeLists.txt
cmake/lib/libzlib/: CMakeLists.txt
cmake/make_ext4fs_tools/: CMakeLists.txt
cmake/make_ext4fs_tools/img2simg/: CMakeLists.txt
cmake/make_ext4fs_tools/make_ext4fs/: CMakeLists.txt
cmake/make_ext4fs_tools/sefcontext_decompile/: CMakeLists.txt
cmake/make_ext4fs_tools/simg2img/: CMakeLists.txt
core/include/private/: android_filesystem_config.h
core/libsparse/: img2simg.c  output_file.c  sparse_read.c
extras/ext4_utils/: contents.c
jni/: Android.mk  Application.mk
prebuilt_binary/: img2simg-arm64-v8a  img2simg-armeabi-v7a  img2simg-x86  img2simg-x86_64  img2simg_android_arm64-v8a  img2simg_android_armeabi-v7a  img2simg_android_x86  img2simg_android_x86_64  make_ext4fs-arm64-v8a  make_ext4fs-armeabi-v7a  make_ext4fs-x86  make_ext4fs-x86_64  make_ext4fs_android_arm64-v8a  make_ext4fs_android_armeabi-v7a  make_ext4fs_android_x86  make_ext4fs_android_x86_64  sefcontext_decompile-arm64-v8a  sefcontext_decompile-armeabi-v7a  sefcontext_decompile-x86  sefcontext_decompile-x86_64  sefcontext_decompile_android_arm64-v8a  sefcontext_decompile_android_armeabi-v7a  sefcontext_decompile_android_x86  sefcontext_decompile_android_x86_64  simg2img-arm64-v8a  simg2img-armeabi-v7a  simg2img-x86  simg2img-x86_64  simg2img_android_arm64-v8a  simg2img_android_armeabi-v7a  simg2img_android_x86  simg2img_android_x86_64
src/core/include/private/: android_filesystem_capability.h
src/extras/ext4_utils/: ext4_utils.h  ext4fixup.c
src/libselinux/src/: label_file.c
src/sefcontext_decompile/: Makefile  README.md  sefcontext_decompile.cpp
